nullaway_error_5191E32E-3FD0-45E4-83CE-1B578C424651.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/validation/FieldError.java:111: error: [NullAway] dereferenced expression otherError is @Nullable
		return (getField().equals(otherError.getField()) &&
		                                    ^
    (see http://t.uber.com/nullaway )
